kubectl_deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: probation-court-prototype
  labels:
    app: probation-court-prototype
spec:
  replicas: 1
  selector:
    matchLabels:
      app: probation-court-prototype
  template:
    metadata:
      labels:
        app: probation-court-prototype
    spec:
      containers:
        - name: probation-court-prototype
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/probation-services/probation-court-prototype:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "1000m"
            requests:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
