kubectl_deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: probation-court-prototype
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - probation-court-prototype.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
    - host: probation-court-prototype.apps.live-1.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: probation-court-prototype
              servicePort: 8000
